--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <!-- Holiii -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>News</title>
+</head>
+<body>
+	
+</body>
+</html>
