--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Holiii -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,9 +10,10 @@
 </head>
 <body>
  <!--Header -->
- <nav class="navbar navbar-default">
+ <nav class="navbar navbar-default bg-header">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="row col-lg-12">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -23,32 +23,36 @@
       </button>
       <a class="navbar-brand" href="#">NEWS.</a>
     </div>
+    </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="row col-lg-12">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">world. <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">business.</a></li>
-            <li><a href="#">politics.</a></li>
-            <li><a href="#">sports.</a></li>
-            <li><a href="#">health.</a></li>
-            <li><a href="#">sciences.</a></li>
-            <li><a href="#">spotlight.</a></li>
-       
-            
-          </ul>
-        </li>
+        <li><a href="#">world.</a></li>
+        <li><a href="#">business.</a></li>
+        <li><a href="#">politics.</a></li>
+        <li><a href="#">sports.</a></li>
+        <li><a href="#">health.</a></li>
+        <li><a href="#">sciences.</a></li>
+        <li><a href="#">spotlight.</a></li>
       </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+      <form class="navbar-form navbar-left pull-right">
+       <button type="submit" class="btn btn-default btn-red"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
       </form>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div><!-- /.collapse navbar-collapse -->
+  </div><!-- /. "row col-lg-12"-->
 </nav>
 
-	
+<!--Script-->
+  <script src="https://use.fontawesome.com/cbf59482a4.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </body>
 </html>
+
+
+
+
+
